Add comment for better code readabilty

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
  <link rel="stylesheet" href="index.css"> 
 </head>
 <body>
+    <!-- Container -->
     <div class="container">
+        <!-- Header Info -->
     <div class="info">
         <h3>Image Slider</h3>
         <p>Image Slider Using HTML5, and CSS</p>
     </div>
+    <!-- Slider -->
     <div class="Slider">
         <img src="/img/product1.jpg" alt="Product1 Img">
         <img src="/img/product2.jpg" alt="Product2 Img">
